# auto-catan

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  README.md  Tiltfile  TrainingLog.txt  config.md  pyproject.toml
RL-CATAN/Catan_Env/: random_action.py
RL-CATAN/RL-Catan-main/: main.py
RL-CATAN/RL_agent/DQN/: log.py  main.py
RL-CATAN/wandb/offline-run-20241106_200120-f20grocq/: run-f20grocq.wandb
RL-Catan-main/: Pull_ML_Data.py  log_Incremental_VP_Small.txt
RL-Catan-main/Artifacts/: Results.csv
RL-Catan-main/Catan_Env/: Interpreter.py  board.py  catan_env.py  player.py  random_action.py
RL-Catan-main/RL_agent/: Artifacts.py  Artifcats.py  Configurations.py  Pull_ML_Data.py  main copy.py  main.py
RL-Catan-main/Visualizations/: BoardSetup.py  Example.py
deploy/: Chart.yaml  values.yaml
gitops/catan-ml/: Dockerfile
gitops/catan-web/: Dockerfile
gitops/catan_web/: Dockerfile
gitops/mlflow/: Dockerfile
gitops/mlflow-catan/: Dockerfile
iac/: 1-install-k3s.sh  1-install-kubectl.sh  2-install-k3s.sh  3-set-kube-config.sh  4-install-helm.sh  5-install-tilt.sh
rl_catan/: Configurations.py  Pull_ML_Data.py  main.py  pyproject.toml
rl_catan/Catan_Env/: action_selection.py  catan_env.py  distribution.py
wandb/offline-run-20241125_183648-nm8p9dwa/: run-nm8p9dwa.wandb
wandb/offline-run-20241125_183741-jcgmgx25/: run-jcgmgx25.wandb
wandb/offline-run-20241125_183839-raejs76x/: run-raejs76x.wandb
wandb/offline-run-20241125_231954-pjxkpnqh/: run-pjxkpnqh.wandb
wandb/offline-run-20241125_232732-852jgiig/: run-852jgiig.wandb
(+37 files in other folders)
