[project]
name = "auto-catan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/catan-dramatiq", "packages/catan-web"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.1",
]
