[project]
name = "auto-catan"
version = "0.1.0"
description = "UV Workspace containing the ML backend and client web-app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.sources]
catan-dramatiq = { workspace = true }

[tool.uv.workspace]
members = ["packages/catan-dramatiq", "packages/catan-web", "packages/catan-ml"]
exclude = ["rl_catan"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.1",
]
